--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 
 svg {
    overflow: visible;
+   margin-left: 100px;
 }
 
 h1, p {
@@ -15,7 +16,7 @@ h1, p {
 }
 
 .chart-outer, .chart {
-   width: fit-content;
+   width: 1100px;
    margin-bottom: 1rem;
    background: #fff;
 }
@@ -28,7 +29,8 @@ h1, p {
 }
 
 .title-container {
-   margin-bottom: 1.5rem;
+   margin-top: 0.5rem;
+   margin-bottom: 2rem;
    text-align: center;
 }
 
